--- a/lib6800/Makefile
+++ b/lib6800/Makefile
@@ -6,8 +6,8 @@ OBJ += lsubeq.o luge.o lugt.o lule.o lult.o lxor.o
 OBJ += makebool.o mulax3.o mulax5.o mulax6.o mulax7.o mulax9.o mulax10.o mulax12.o
 OBJ += negeax.o sub.o
 OBJ += shlax.o shleax.o shr.o shrax.o shreax.o shreax8.o swap.o
-OBJ += tosasleax.o
 OBJ += tosasreax.o tosdivax.o tosshlax.o tossubeax.o tosudivax.o tosumodax.o
+OBJ += tosshreax.o tosasleax.o
 OBJ += tosudiveax.o tosmodeax.o tosdiveax.o
 OBJ += divide.o divide32x32.o
 OBJ += fixfp.o dtox.o lateadjustsp.o dopulx.o addeqstatic.o des.o
@@ -19,7 +19,7 @@ OBJ += tosultax.o tosugtax.o tosuleax.o tosugeax.o
 OBJ += tosumulax.o tosumodeax.o multiply32x32.o
 
 OBJ += __cpu_to_le16.o __cpu_to_le32.o
-OBJ += _memcpy.o _memset.o _strlen.o _strcpy.o
+OBJ += _memcpy.o _memset.o _strlen.o _strcpy.o _strcmp.o
 OBJ += _isalnum.o _isalpha.o _isascii.o _isblank.o _iscntrl.o
 OBJ += _isdigit.o _isgraph.o _islower.o _isprint.o _ispunct.o
 OBJ += _isspace.o _isupper.o _isxdigit.o
