--- a/lib6800/Makefile
+++ b/lib6800/Makefile
@@ -13,7 +13,7 @@ OBJ += divide.o divide32x32.o
 OBJ += fixfp.o dtox.o lateadjustsp.o dopulx.o addeqstatic.o des.o
 OBJ += laddeqstatic8.o laddeqstatic16.o baddeqstatic.o
 OBJ += storedpush.o dopulxstb.o dopulxstd.o storetos.o
-OBJ += loadtos.o pshindvx.o ret.o leasp.o
+OBJ += loadtos.o pshindvx.o pshindvlx.o ret.o leasp.o
 OBJ += toseqax.o tosneax.o tosltax.o tosgtax.o tosleax.o tosgeax.o
 OBJ += tosultax.o tosugtax.o tosuleax.o tosugeax.o
 OBJ += tosumulax.o tosumodeax.o multiply32x32.o
