System tools such as as, ld, nm, etc. are from Fuzix-Compile-Kit. The tools in this repository will be deprecated in the future.

--- a/lib6303/Makefile
+++ b/lib6303/Makefile
@@ -1,9 +1,16 @@
 OBJ = divide.o laddeq.o lsubeq.o tosudivax.o
 
-all: $(OBJ)
+all: lib6303.a
 
-%.o: %.s
-	../as68/as68 $^
+.s.o:
+	cc68 -m6303 -c $<
+
+.c.o:
+	cc68 -m6303 -O -c $<
+
+lib6303.a: $(OBJ)
+	rm -f lib6303.a
+	ar qc lib6303.a `lorderz80 $(OBJ) | tsort`
 
 clean:
 	rm -f *.o *.a *~
