--- a/libc/Makefile
+++ b/libc/Makefile
@@ -3,11 +3,18 @@ CRT = crt0.o
 
 all: libc.a $(CRT)
 
-libc.a: $(OBJ)
-	ar rc libc.a $(OBJ)
-
 %.o: %.s
-	../as68/as68 $^
+	as6800 $^
+
+.s.o:
+	cc68 -m6803 -c $<
+
+.c.o:
+	cc68 -m6803 -O -c $<
+
+libc.a: $(OBJ)
+	rm -f libc.a
+	ar qc libc.a `../lorderz80 $(OBJ) | tsort`
 
 clean:
 	rm -f $(OBJ) $(CRT) libc.a *~
