--- a/target-bm/Makefile
+++ b/target-bm/Makefile
@@ -2,8 +2,10 @@ ORG = 0x4000
 
 all:
 	(cd lib; make)
+	(cd samples; make)
 	(cd tools; make)
 
 clean:
 	(cd lib; make clean)
+	(cd samples; make clean)
 	(cd tools; make clean)
