add bm support. bugfix

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -1,4 +1,4 @@
-OBJ = 
+OBJ = $(CRT)
 CRT = crt0.o
 
 all: libc.a $(CRT)
@@ -14,7 +14,7 @@ all: libc.a $(CRT)
 
 libc.a: $(OBJ)
 	rm -f libc.a
-	ar qc libc.a `../lorderz80 $(OBJ) | tsort`
+	ar qc libc.a `lorderz80 $(OBJ) | tsort`
 
 clean:
 	rm -f $(OBJ) $(CRT) libc.a *~
